--- a/package.json
+++ b/package.json
@@ -31,12 +31,12 @@
 	},
 	"dependencies": {
 		"chalk": "5.3.0",
-		"chokidar": "3.6.0",
-		"fast-glob": "3.3.2",
-		"fs-extra": "11.2.0"
+		"fast-glob": "3.3.2"
 	},
-	"optionalDependencies": {
-		"@playform/build": "0.0.2",
+	"devDependencies": {
+		"@playform/build": "0.0.2"
+	},
+	"peerDependencies": {
 		"@playform/document": "0.0.2"
 	}
 }
