--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
 	"types": "./Target/Function/Copy.d.ts",
 	"scripts": {
 		"Document": "Document 'Source/**/*.ts'",
-		"prepublishOnly": "Build 'Source/**/*.ts'"
+		"Build": "Build 'Source/**/*.ts'"
 	},
 	"dependencies": {
 		"chalk": "5.3.0",
