--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
 	"main": "./Target/Function/Copy.js",
 	"types": "./Target/Function/Copy.d.ts",
 	"scripts": {
+		"Document": "Document 'Source/**/*.ts'",
 		"prepublishOnly": "Build 'Source/**/*.ts'"
 	},
 	"dependencies": {
@@ -33,6 +34,7 @@
 		"fast-glob": "3.3.2"
 	},
 	"devDependencies": {
-		"@playform/build": "0.0.5"
+		"@playform/build": "0.0.5",
+		"@playform/document": "0.0.6"
 	}
 }
