--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
 		"plugin",
 		"copy"
 	],
-	"homepage": "https://github.com/Playform/Copy#ReadMe",
+	"homepage": "https://github.com/Playform/Copy#readme",
 	"bugs": {
 		"url": "https://github.com/Playform/Copy/issues"
 	},
