--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
 	],
 	"homepage": "HTTPS://GitHub.Com/Playform/Copy#readme",
 	"bugs": {
-		"url": "https://github.com/Playform/Copy/issues"
+		"url": "HTTPS://GitHub.Com/Playform/Copy/issues"
 	},
 	"repository": {
 		"type": "git",
