--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
 	"name": "@playform/copy",
 	"version": "0.0.1",
 	"private": false,
-	"description": "©️ — Copy —",
+	"description": "©️ Copy —",
 	"keywords": [
 		"esbuild",
 		"plugin",
@@ -19,7 +19,7 @@
 	},
 	"license": "SEE LICENSE IN LICENSE",
 	"author": {
-		"name": "⛲ Source ⁄ 🚪 — Open —",
+		"name": "⛲ Source ⁄ 🚪 Open —",
 		"email": "Source/Open@PlayForm.Cloud",
 		"url": "HTTPS://PlayForm.Cloud"
 	},
