--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
 	},
 	"repository": {
 		"type": "git",
-		"url": "git+HTTPS://github.com/PlayForm/Copy.git"
+		"url": "git+https://github.com/PlayForm/Copy.git"
 	},
 	"license": "SEE LICENSE IN LICENSE",
 	"author": {
