--- a/package.json
+++ b/package.json
@@ -27,7 +27,6 @@
 	"main": "./Target/Function/Copy.js",
 	"types": "./Target/Function/Copy.d.ts",
 	"scripts": {
-		"Document": "Document 'Source/**/*.ts'",
 		"prepublishOnly": "Build 'Source/**/*.ts'"
 	},
 	"dependencies": {
@@ -35,7 +34,5 @@
 		"fast-glob": "3.3.2"
 	},
 	"devDependencies": {
-		"@playform/build": "0.0.9",
-		"@playform/document": "0.0.7"
-	}
+		"@playform/build": "0.0.9"}
 }
