--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
 	"main": "./Target/Function/Copy.js",
 	"types": "./Target/Function/Copy.d.ts",
 	"scripts": {
+		"Run": "Build 'Source/**/*.ts' -W",
 		"prepublishOnly": "Build 'Source/**/*.ts'"
 	},
 	"dependencies": {
@@ -34,6 +35,6 @@
 		"fast-glob": "3.3.2"
 	},
 	"devDependencies": {
-		"@playform/build": "0.0.11"
+		"@playform/build": "0.1.0"
 	}
 }
