--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
 	"main": "./Target/Function/Copy.js",
 	"types": "./Target/Function/Copy.d.ts",
 	"scripts": {
-		"Run": "Build 'Source/**/*.ts' -W",
+		"Run": "Build 'Source/**/*.ts' --Watch",
 		"prepublishOnly": "Build 'Source/**/*.ts'"
 	},
 	"dependencies": {
